[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Evaluation.gd" type="Script" id=1]
[ext_resource path="res://theme/assets/PurpleSpace.png" type="Texture" id=2]
[ext_resource path="res://theme/EvaluationPageTheme.tres" type="Theme" id=3]

[node name="Evaluation" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="Button" parent="VBox"]
margin_left = 554.0
margin_right = 620.0
margin_bottom = 22.0
size_flags_horizontal = 12
text = "Main Menu"

[node name="TitlePage" type="Label" parent="VBox"]
margin_top = 26.0
margin_right = 620.0
margin_bottom = 42.0
text = "Evaluation"
align = 1

[node name="Codes" type="Label" parent="VBox"]
margin_top = 46.0
margin_right = 620.0
margin_bottom = 81.0
text = "Evaluation Page Code: C3301
Lobby Code: ZETA7 "
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
margin_top = 85.0
margin_right = 620.0
margin_bottom = 340.0
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="VBox/ScrollContainer"]
margin_right = 620.0
margin_bottom = 255.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameSummary" type="VBoxContainer" parent="VBox/ScrollContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 34.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBox/ScrollContainer/TabContainer/GameSummary"]
margin_right = 612.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="Content" type="Label" parent="VBox/ScrollContainer/TabContainer/GameSummary/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 605.0
margin_bottom = 23.0

[node name="PanelContainer2" type="PanelContainer" parent="VBox/ScrollContainer/TabContainer/GameSummary"]
margin_top = 34.0
margin_right = 612.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="Content" type="Label" parent="VBox/ScrollContainer/TabContainer/GameSummary/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 605.0
margin_bottom = 23.0

[node name="Players" type="VBoxContainer" parent="VBox/ScrollContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Questions" type="VBoxContainer" parent="VBox/ScrollContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="pressed" from="VBox/Return" to="." method="_on_Return_pressed"]
